@@ -153,6 +153,10 @@ Tue Sep 22 CST 2015
 
 Wed Sep 23 CST 2015
 - [+] Diary/09-23-2015
-- [+] include/sandix/major.h
+- [+] include/sandix/major.h			[D] Device Major Number
 - [M] include/sandix/tty.h			[D] struct tty_struct etc.
 - [M] arch/x86/include/asm/current.h		[D] Renamed from sched.h
+- [M] drivers/tty/tty_io.c			[D] Add tty_register_driver etc.
+- [M] drivers/console/console.c			[D] Add struct tty_driver console_driver.
+-						 >  console_driver is the interface between
+-						 >  tty layer and vitual console layer.
